Fixed dark mode

--- a/frontend/src/styles/Signup.module.css
+++ b/frontend/src/styles/Signup.module.css
@@ -38,7 +38,8 @@
 
 .label {  
     font-weight: bold;
-    color: #374151; /* gray-700 */
+    font-size: 1.125rem;
+    color: #4b5563; /* gray-600 */
 }
 
 .input {
